nymea-plugins-modbus (1.7.003) buster focal jammy; urgency=medium

* Amperfied bugfixes & improvements.

 -- Sebastian Ringer <s.ringer@consolinno.de> Mon, 27 Nov 2023 16:13:53 +0200

nymea-plugins-modbus (1.7.002-1) buster focal jammy; urgency=medium

* Adapt to new versioning schema

 -- Florian Knab <f.knab@consolinno.de> Thu, 19 Sep 2023 7:50:53 +0200

nymea-plugins-modbus (1.7.002) dev; urgency=medium

  * SDM630: Check for decreasing energy values and ignore them .

 -- Leonhard Heizinger <l.heizinger@consolinno.de>  Thu, 29 Aug 2023 10:28:48 +0100

nymea-plugins-modbus (1.7.001) dev; urgency=medium

  * Bugfix Mac address is null

 -- Knab Florian <f.knab@consolinno.de>  Thu, 24 Aug 2023 10:14:48 +0100

nymea-plugins-modbus (1.7.0) jammy; urgency=medium

  [ Michael Zanetti ]
  * New plugin: Senseair S8
  * Drexel&Weiss: Add min/max values to co2sensor

  [ Simon Stürz ]
  * ModbusRtu connection: Check reachablility in constructor

  [ Michael Zanetti ]
  * New plugin: Amperfied/Heidelberg

  [ Bernhard Trinnes ]
  * Drexel und Weiss: Add smartmeterconsumer interface

  [ Simon Stürz ]
  * huawei: Set energy states to 0 if not connected and filter invalid
    energy counter values
  * SMA: set energy values to 0 on disconnected

  [ Michael Zanetti ]
  * Schrack: Add firmware version state
  * Schrack: Rework discovery

 -- jenkins <developer@nymea.io>  Tue, 07 Mar 2023 17:25:40 +0100

nymea-plugins-modbus (1.6.3) jammy; urgency=medium

  [ Michael Zanetti ]
  * Mennekes: Add firmware version check and workaround erraneously
    signalled 0A max
  * Mennekes: Discard unknown discovery results

 -- jenkins <developer@nymea.io>  Wed, 01 Feb 2023 12:18:26 +0100

nymea-plugins-modbus (1.6.2) jammy; urgency=medium

  [ Michael Zanetti ]
  * Schrack: Fix connection leak on failed setup
  * Mennekes: Discard unknown discovery results

  [ Simon Stürz ]
  * SMA: fix power parsing for SunnyWebBox
  * modbuscommander: update actions and fix RTU crash on resource