@@ -1,3 +1,9 @@
+nymea-plugins-modbus (1.7.004) buster focal jammy; urgency=medium
+
+* Amperfied Energy Control discovery improved.
+
+ -- Sebastian Ringer <s.ringer@consolinno.de> Fr, 1 Dec 2023 16:46:53 +0200
+
 nymea-plugins-modbus (1.7.003) buster focal jammy; urgency=medium
 
 * Amperfied bugfixes & improvements.
